<resources>
    <string name="module1">            \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 C346\n Mobile App Development</string>
    <string name="module2">             \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020   C235\n     \u0020\u0020\u0020\u0020      IT Security and \n         \u0020\u0020\u0020\u0020  \u0020  Management</string>
    <string name="module3">              \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  C203\n Web App Development </string>
    <string name="module4">              \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  C206\n Software Development \n       \u0020\u0020\u0020\u0020    \u0020\u0020\u0020\u0020  \u0020   Process</string>
    <string name="module5">              \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  C218\nUI/UX Design for Apps</string>
    <string name="module6">              \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  C390\nPortfolio Development</string>

    <string name="app_name">My Modules</string>

    <string name="moduleCode">Module Code: </string>
    <string name="moduleName">Module Name: </string>
    <string name="academicyear">Academic Year:</string>
    <string name="semester">Semester: </string>
    <string name="credit">Module Credit: </string>
    <string name="venue">Venue: </string>


</resources>