<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modules"
    android:orientation="vertical"
    tools:context=".Modules">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120px"
        android:layout_marginTop="338px"
        android:orientation="vertical">

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60px"
            android:text="@string/moduleCode" />

        <TextView
            android:id="@+id/name"
            android:textSize="40px"
            android:layout_marginTop="195px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moduleName" />

        <TextView
            android:id="@+id/year"
            android:textSize="60px"
            android:layout_marginTop="195px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/academicyear" />

        <TextView
            android:id="@+id/sem"
            android:textSize="60px"
            android:layout_marginTop="175px"            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester" />

        <TextView
            android:id="@+id/credit"
            android:textSize="60px"
            android:layout_marginTop="185px"            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit" />

        <TextView
            android:id="@+id/venue"
            android:textSize="60px"
            android:layout_marginTop="178px"            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/venue" />
    </LinearLayout>
</LinearLayout>