<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text=" Modules"
            android:textSize="100px"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="330px"
        android:layout_marginLeft="135px">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="30px">

    <TextView
        android:id="@+id/textAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module1"
        android:textSize="27px"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220px"
        android:id="@+id/textWeb"
        android:textSize="28px"
        android:text="@string/module3"></TextView>

</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="550px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textProcess"
                android:textSize="29px"
                android:text="@string/module4"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230px"
                android:id="@+id/textDesign"
                android:textSize="29px"
                android:text="@string/module5"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="530px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textPortfolio"
                android:textSize="29px"
                android:text="@string/module6"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250px"
                android:id="@+id/textIt"
                android:textSize="29px"
                android:text="@string/module2"></TextView>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>